# Valquiria-Joao_Victor_Huguenin-Lucas_Parente-Pedro_Lippi-Questao3

./: CMakeLists.txt  README.md
src/: ganhaColuna.c  ganharDiagonal1.c  ganharDiagonal2.c  ganharLinhas.c  main.c  operacoes_jogo.h
